--- a/src/content/0.index.md
+++ b/src/content/0.index.md
@@ -1,6 +1,6 @@
 # Getting Started
 
-This is the walt.id Verifiable Credential Repository.  
+This is the InfoCert Verifiable Credential Repository.  
 Here you can find an assortment of Verifiable Credential examples and their corresponding example dynamic data mappings.
 
 - Select a credential from the Repository to the left
