Rebranding Credential Catalogue

--- a/src/content/0.index.md
+++ b/src/content/0.index.md
@@ -1,7 +1,16 @@
 # Getting Started
 
-This is the InfoCert Verifiable Credential Repository.  
-Here you can find an assortment of Verifiable Credential examples and their corresponding example dynamic data mappings.
+Welcome to the InfoCert Credentials Catalogue
 
-- Select a credential from the Repository to the left
-- [View the API endpoints](/api/endpoints)
+Dive into the InfoCert Credential Catalogue, your trusted repository for digital credentials. Familiarize yourself with our comprehensive schemas, each designed to provide clarity and ease of use.
+
+Explore, Issue, and Verify with Ease
+
+- View Schemas: Gain insights into each credential's structure and data points by exploring our detailed schemas.
+- API Access: Utilize our robust APIs for issuers, verifiers, and wallets to seamlessly issue and verify credentials within your digital ecosystem.
+- Join Our Catalogue: Have credentials to add? Enhance our catalogue by contacting Matteo Simone Mirabelli at matteosimone.mirabelli@infocert.it and become part of our growing community.
+Start Now
+
+Choose a credential from our list to start understanding digital identities.
+
+[View the API Endpoints](/api/endpoints) to kickstart your integration journey with InfoCert.
