--- a/src/content/0.index.md
+++ b/src/content/0.index.md
@@ -9,7 +9,7 @@ Explore, Issue, and Verify with Ease
 - View Schemas: Gain insights into each credential's structure and data points by exploring our detailed schemas.
 - API Access: Utilize our robust APIs for issuers, verifiers, and wallets to seamlessly issue and verify credentials within your digital ecosystem.
 - Join Our Catalogue: Have credentials to add? Enhance our catalogue by contacting Matteo Simone Mirabelli at matteosimone.mirabelli@infocert.it and become part of our growing community.
-Start Now
+Start Now!
 
 Choose a credential from our list to start understanding digital identities.
 
